--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "In this notebook we will compute graph embeddings using `kgtk graph-embeddings` command for the `arnold` subgraph and demonstrate a few applications.\n",
     "\n",
-    "First step is to augment the `claims.wikibase-item.tsv.gz` filw with `derived.P31x.tsv` file which contains occupations for humans as `instance of (P31)`\n",
+    "First step is to augment the `claims.wikibase-item.tsv.gz` file with `derived.P31x.tsv` file which contains occupations for humans as `instance of (P31)`\n",
     "\n",
     "- `claims.wikibase-item.tsv.gz`: KGTK claims file non literal edges only\n",
     "- `derived.P31x.tsv`: file with additional P31x links, adding occupation as `instance of` (computed)"
