Update Arnold graph to include URLs so that images show up

--- a/tutorial/04-kg-enrichment-with-csv.ipynb
+++ b/tutorial/04-kg-enrichment-with-csv.ipynb
@@ -126,17 +126,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
       "kgtk: kgtk\n",
-      "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
-      "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment\n",
       "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
-      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
-      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment\n",
+      "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
       "KGTK_GRAPH_CACHE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
       "KGTK_LABEL_FILE: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment\n",
+      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
+      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
+      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment\n",
       "all: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\n",
       "label: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
       "alias: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\n",
@@ -201,8 +201,8 @@
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 7.07 ms, sys: 12 ms, total: 19.1 ms\n",
-      "Wall time: 42.1 s\n"
+      "CPU times: user 5.38 ms, sys: 9.3 ms, total: 14.7 ms\n",
+      "Wall time: 704 ms\n"
      ]
     }
    ],
@@ -1203,15 +1203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.59 s, sys: 1.89 s, total: 11.5 s\n",
-      "Wall time: 12.2 s\n"
+      "CPU times: user 12.4 s, sys: 2.97 s, total: 15.3 s\n",
+      "Wall time: 15.2 s\n"
      ]
     },
     {
@@ -1278,38 +1278,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1888805</th>\n",
+       "      <th>1802950</th>\n",
+       "      <td>tt9914942</td>\n",
+       "      <td>usa_gross_income</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1802951</th>\n",
        "      <td>tt9914942</td>\n",
        "      <td>worlwide_gross_income</td>\n",
        "      <td>$ 59794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1888806</th>\n",
+       "      <th>1802952</th>\n",
        "      <td>tt9914942</td>\n",
        "      <td>metascore</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1888807</th>\n",
+       "      <th>1802953</th>\n",
        "      <td>tt9914942</td>\n",
        "      <td>reviews_from_users</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1888808</th>\n",
+       "      <th>1802954</th>\n",
        "      <td>tt9914942</td>\n",
        "      <td>reviews_from_critics</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1888809</th>\n",
-       "      <td>tt9914942</td>\n",
-       "      <td>label</td>\n",
-       "      <td>P1476</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1888810 rows × 3 columns</p>\n",
+       "<p>1802955 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1320,16 +1320,16 @@
        "3        tt0000009         date_published  1894-10-09\n",
        "4        tt0000009                  genre     Romance\n",
        "...            ...                    ...         ...\n",
-       "1888805  tt9914942  worlwide_gross_income     $ 59794\n",
-       "1888806  tt9914942              metascore         NaN\n",
-       "1888807  tt9914942     reviews_from_users         NaN\n",
-       "1888808  tt9914942   reviews_from_critics         2.0\n",
-       "1888809  tt9914942                  label       P1476\n",
+       "1802950  tt9914942       usa_gross_income         NaN\n",
+       "1802951  tt9914942  worlwide_gross_income     $ 59794\n",
+       "1802952  tt9914942              metascore         NaN\n",
+       "1802953  tt9914942     reviews_from_users         NaN\n",
+       "1802954  tt9914942   reviews_from_critics         2.0\n",
        "\n",
-       "[1888810 rows x 3 columns]"
+       "[1802955 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,15 +1350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 13.1 ms, sys: 39.5 ms, total: 52.5 ms\n",
-      "Wall time: 16.1 s\n"
+      "CPU times: user 2.55 s, sys: 340 ms, total: 2.89 s\n",
+      "Wall time: 19.5 s\n"
      ]
     },
     {
@@ -1417,7 +1417,7 @@
        "2  tt0000009            year        1894"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
        "[1291 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
        "0          6698"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
        "0        2447"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1843,7 @@
        "[1291 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
        "[1291 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,15 +2047,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.5 ms, sys: 16.7 ms, total: 27.2 ms\n",
-      "Wall time: 1.18 s\n"
+      "CPU times: user 11.6 ms, sys: 18.8 ms, total: 30.5 ms\n",
+      "Wall time: 1.09 s\n"
      ]
     },
     {
@@ -2185,7 +2185,7 @@
        "[1291 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2404,7 @@
        "[3873 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2484,7 @@
        "1  Q1009788-Pnumber_of_critic_reviews-ff2927  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2664,7 +2664,7 @@
        "[380 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2693,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
        "[380 rows x 1 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2814,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2843,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2998,7 +2998,7 @@
        "[380 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3030,7 @@
        "380"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3067,7 +3067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3209,7 +3209,7 @@
        "[1291 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3238,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
        "[3873 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3424,7 +3424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3473,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3603,7 +3603,7 @@
        "[1291 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3625,7 +3625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3651,7 +3651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3807,7 +3807,7 @@
        "[9037 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3879,7 +3879,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "!ls -l {project_deployment_path}"
