Use kypher parameters

--- a/use-cases/ontology-examples.ipynb
+++ b/use-cases/ontology-examples.ipynb
@@ -336,7 +336,7 @@
     "    query = kypher_api.get_query(\n",
     "        inputs=['item', 'p279star', 'label'],\n",
     "        match='item: (n1)-[edgeid {label: property}]->(n2)',\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -460,7 +460,7 @@
     "        match=\"\"\"\n",
     "            p279star: (n1)-[]->(hop1),\n",
     "            item: (hop1)-[edgeid {label: property}]->(n2)\"\"\",\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -588,7 +588,7 @@
     "            item: (n1)-[:P31]->(class),\n",
     "            p279star: (class)-[]->(hop1),\n",
     "            item: (hop1)-[edgeid {label: property}]->(n2)\"\"\",\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -705,7 +705,7 @@
     "            p279star: (n1)-[]->(hop1),\n",
     "            item: (hop1)-[edgeid {label: property}]->(hop2),\n",
     "            p279star: (n2)-[]->(hop2)\"\"\",\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -725,7 +725,7 @@
     "            \"\"\",\n",
     "        limit=limit\n",
     "    )\n",
-    "    return query.execute(fmt='df')"
+    "    return query.execute(fmt='df', QNODE1=qnode1, QNODE2=qnode2)"
    ]
   },
   {
@@ -812,14 +812,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-04T00:30:47.071975Z",
-     "iopub.status.busy": "2021-12-04T00:30:47.071709Z",
-     "iopub.status.idle": "2021-12-04T00:30:47.077282Z",
-     "shell.execute_reply": "2021-12-04T00:30:47.076503Z",
-     "shell.execute_reply.started": "2021-12-04T00:30:47.071946Z"
+     "iopub.execute_input": "2021-12-04T01:47:54.124752Z",
+     "iopub.status.busy": "2021-12-04T01:47:54.124487Z",
+     "iopub.status.idle": "2021-12-04T01:47:54.129944Z",
+     "shell.execute_reply": "2021-12-04T01:47:54.129293Z",
+     "shell.execute_reply.started": "2021-12-04T01:47:54.124721Z"
     },
     "tags": []
    },
@@ -834,7 +834,7 @@
     "            p279star: (class)-[]->(hop1),\n",
     "            item: (hop1)-[edgeid {label: property}]->(hop2),\n",
     "            p279star: (n2)-[]->(hop2)\"\"\",\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -854,19 +854,19 @@
     "            \"\"\",\n",
     "        limit=limit\n",
     "    )\n",
-    "    return query.execute(fmt='df')"
+    "    return query.execute(fmt='df', QNODE1=qnode1, QNODE2=qnode2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-04T00:30:47.650174Z",
-     "iopub.status.busy": "2021-12-04T00:30:47.649915Z",
-     "iopub.status.idle": "2021-12-04T00:30:54.435283Z",
-     "shell.execute_reply": "2021-12-04T00:30:54.434703Z",
-     "shell.execute_reply.started": "2021-12-04T00:30:47.650144Z"
+     "iopub.execute_input": "2021-12-04T01:47:54.270842Z",
+     "iopub.status.busy": "2021-12-04T01:47:54.270600Z",
+     "iopub.status.idle": "2021-12-04T01:48:00.976963Z",
+     "shell.execute_reply": "2021-12-04T01:48:00.976386Z",
+     "shell.execute_reply.started": "2021-12-04T01:47:54.270815Z"
     },
     "tags": []
    },
@@ -1141,7 +1141,7 @@
        "13                   'object'@en  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,14 +1159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-04T00:31:03.361494Z",
-     "iopub.status.busy": "2021-12-04T00:31:03.361238Z",
-     "iopub.status.idle": "2021-12-04T00:31:03.366738Z",
-     "shell.execute_reply": "2021-12-04T00:31:03.365936Z",
-     "shell.execute_reply.started": "2021-12-04T00:31:03.361465Z"
+     "iopub.execute_input": "2021-12-04T01:46:14.818612Z",
+     "iopub.status.busy": "2021-12-04T01:46:14.818360Z",
+     "iopub.status.idle": "2021-12-04T01:46:14.823740Z",
+     "shell.execute_reply": "2021-12-04T01:46:14.822911Z",
+     "shell.execute_reply.started": "2021-12-04T01:46:14.818585Z"
     },
     "tags": []
    },
@@ -1182,7 +1182,7 @@
     "            item: (hop1)-[edgeid {label: property}]->(hop2),\n",
     "            item: (n2)-[:P31]->(n2_class),\n",
     "            p279star: (n2_class)-[]->(hop2)\"\"\",\n",
-    "        where=f'((n1 = \"{qnode1}\" and n2 = \"{qnode2}\") or (n2 = \"{qnode1}\" and n1 = \"{qnode2}\")) and property != \"P279\" and property != \"P1889\"',\n",
+    "        where=f'((n1 = $QNODE1 and n2 = $QNODE2) or (n2 = $QNODE1 and n1 = $QNODE2)) and property != \"P279\" and property != \"P1889\"',\n",
     "        opt1='label: (n1)-[]->(n1_label)',\n",
     "        opt2='label: (property)-[]->(property_label)',\n",
     "        opt3='label: (n2)-[]->(n2_label)',\n",
@@ -1202,19 +1202,19 @@
     "            \"\"\",\n",
     "        limit=limit\n",
     "    )\n",
-    "    return query.execute(fmt='df')"
+    "    return query.execute(fmt='df', QNODE1=qnode1, QNODE2=qnode2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-04T00:31:03.779753Z",
-     "iopub.status.busy": "2021-12-04T00:31:03.779494Z",
-     "iopub.status.idle": "2021-12-04T00:31:09.151739Z",
-     "shell.execute_reply": "2021-12-04T00:31:09.151272Z",
-     "shell.execute_reply.started": "2021-12-04T00:31:03.779722Z"
+     "iopub.execute_input": "2021-12-04T01:46:15.843051Z",
+     "iopub.status.busy": "2021-12-04T01:46:15.842771Z",
+     "iopub.status.idle": "2021-12-04T01:46:21.039706Z",
+     "shell.execute_reply": "2021-12-04T01:46:21.039224Z",
+     "shell.execute_reply.started": "2021-12-04T01:46:15.843021Z"
     },
     "tags": []
    },
@@ -1585,7 +1585,7 @@
        "19  'artificial physical object'@en  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
