update to use configure KGTK

--- a/use-cases/geography.ipynb
+++ b/use-cases/geography.ipynb
@@ -2,38 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Parameters\n",
-    "\n",
-    "# Folder on local machine where to create the output and temporary folders\n",
-    "output_path = \"/Users/pedroszekely/Downloads/kypher\"\n",
-    "\n",
-    "# The names of the output and temporary folders\n",
-    "output_folder = \"geography\"\n",
-    "temp_folder = \"temp.geography\"\n",
-    "\n",
-    "# The location of input Wikidata files\n",
-    "wikidata_folder = \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/\"\n",
-    "\n",
-    "# Location of the cache database for kypher\n",
-    "cache_path = \"/Users/pedroszekely/Downloads/kypher\"\n",
-    "\n",
-    "# shortcuts to commands\n",
-    "kgtk = \"time kgtk --debug\"\n",
-    "# kgtk = \"kgtk --debug\"\n",
-    "\n",
-    "debug = True"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -46,193 +14,67 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import altair as alt\n",
     "\n",
-    "import papermill as pm\n",
+    "\n",
     "from IPython.display import display, Markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kgtk_to_dataframe(kgtk):\n",
-    "    columns = kgtk[0].split(\"\\t\")\n",
-    "    data = []\n",
-    "    for line in kgtk[1:]:\n",
-    "        data.append(line.encode('utf-8').decode('utf-8').split(\"\\t\"))\n",
-    "    return pd.DataFrame(data, columns=columns)    "
+    "# Parameters\n",
+    "\n",
+    "input_path = \"/data/amandeep/wikidata-20211027-dwd-v3\"\n",
+    "output_path = \"/data/amandeep/wikidata-20211027-dwd-v3\"\n",
+    "\n",
+    "graph_cache_path = None\n",
+    "\n",
+    "project_name = \"geography-files\"\n",
+    "\n",
+    "files = 'label,item,monolingualtext,external_id,p279star,p31'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALIAS: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/aliases.en.tsv.gz\"\n",
-      "CLAIMS: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.tsv.gz\"\n",
-      "COORDINATES: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.globe-coordinate.tsv.gz\"\n",
-      "DESCRIPTION: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/descriptions.en.tsv.gz\"\n",
-      "DWD_ISA: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/derived.dwd_isa.tsv.gz\"\n",
-      "EXAMPLES_DIR: \"/Users/pedroszekely/Documents/GitHub/kgtk/examples\"\n",
-      "EXTERNAL_ID: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.external-id.tsv.gz\"\n",
-      "ISA: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/derived.isa.tsv.gz\"\n",
-      "ITEM: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.wikibase-item.tsv.gz\"\n",
-      "LABEL: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/labels.en.tsv.gz\"\n",
-      "MONOLINGUALTEXT: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.monolingualtext.tsv.gz\"\n",
-      "OUT: \"/Users/pedroszekely/Downloads/kypher/geography\"\n",
-      "P279: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/derived.P279.tsv.gz\"\n",
-      "P279STAR: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/derived.P279star.tsv.gz\"\n",
-      "P31: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/derived.P31.tsv.gz\"\n",
-      "PROPERTY_DATATYPES: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/metadata.property.datatypes.tsv.gz\"\n",
-      "QUALIFIERS: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/qualifiers.tsv.gz\"\n",
-      "QUALIFIERS_TIME: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/qualifiers.time.tsv.gz\"\n",
-      "QUANTITY: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.quantity.tsv.gz\"\n",
-      "SITELINKS: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/sitelinks.tsv.gz\"\n",
-      "STORE: \"/Users/pedroszekely/Downloads/kypher/wikidata.sqlite3.db\"\n",
-      "TEMP: \"/Users/pedroszekely/Downloads/kypher/temp.geography\"\n",
-      "TIME: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/claims.time.tsv.gz\"\n",
-      "WIKIDATA: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidata-20210215/data/\"\n",
-      "kgtk: \"time kgtk --debug\"\n",
-      "kypher: \"time kgtk --debug query --graph-cache /Users/pedroszekely/Downloads/kypher/wikidata.sqlite3.db\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# The names of files in the KGTK Wikidata distirbution that we will use in this notebook.\n",
-    "file_names = {\n",
-    "    \"claims\": \"claims.tsv.gz\",\n",
-    "    \"quantity\": \"claims.quantity.tsv.gz\",\n",
-    "    \"time\": \"claims.time.tsv.gz\",\n",
-    "    \"label\": \"labels.en.tsv.gz\",\n",
-    "    \"alias\": \"aliases.en.tsv.gz\",\n",
-    "    \"description\": \"descriptions.en.tsv.gz\",\n",
-    "    \"item\": \"claims.wikibase-item.tsv.gz\",\n",
-    "    \"monolingualtext\": \"claims.monolingualtext.tsv.gz\",\n",
-    "    \"external_id\": \"claims.external-id.tsv.gz\",\n",
-    "    \"qualifiers\": \"qualifiers.tsv.gz\",\n",
-    "    \"sitelinks\": \"sitelinks.tsv.gz\",\n",
-    "    \"qualifiers_time\": \"qualifiers.time.tsv.gz\",\n",
-    "    \"coordinates\": \"claims.globe-coordinate.tsv.gz\",\n",
-    "    \"property_datatypes\": \"metadata.property.datatypes.tsv.gz\",\n",
-    "    \"isa\": \"derived.isa.tsv.gz\",\n",
-    "    \"p279star\": \"derived.P279star.tsv.gz\",\n",
-    "    \"p279\": \"derived.P279.tsv.gz\",\n",
-    "    \"p31\": \"derived.P31.tsv.gz\",\n",
-    "    \"dwd_isa\": \"derived.dwd_isa.tsv.gz\"\n",
-    "}\n",
-    "\n",
-    "# We will define environment variables to hold the full paths to the files as we will use them in the shell commands\n",
-    "kgtk_environment_variables = []\n",
-    "\n",
-    "os.environ['WIKIDATA'] = wikidata_folder\n",
-    "kgtk_environment_variables.append('WIKIDATA')\n",
-    "\n",
-    "for key, value in file_names.items():\n",
-    "    variable = key.upper()\n",
-    "    os.environ[variable] = wikidata_folder + value\n",
-    "    kgtk_environment_variables.append(variable)\n",
-    "    \n",
-    "# KGTK creates a SQLite database to index the knowledge graph.\n",
-    "if cache_path:\n",
-    "    os.environ['STORE'] = \"{}/wikidata.sqlite3.db\".format(cache_path)\n",
-    "else:\n",
-    "    os.environ['STORE'] = \"{}/{}/wikidata.sqlite3.db\".format(output_path, temp_folder)\n",
-    "kgtk_environment_variables.append('STORE')\n",
-    "\n",
-    "# We will create many temporary files, so set up a folder for outputs and one for the temporary files.\n",
-    "os.environ['TEMP'] = \"{}/{}\".format(output_path, temp_folder) \n",
-    "os.environ['OUT'] = \"{}/{}\".format(output_path, output_folder) \n",
-    "kgtk_environment_variables.append('TEMP')\n",
-    "kgtk_environment_variables.append('OUT')\n",
-    "\n",
-    "# Envronment variables with shortcuts to the commands we use often\n",
-    "os.environ['kgtk'] = kgtk\n",
-    "# Use for debugging, but careful as it causes import to dataframes to break\n",
-    "os.environ['kypher'] = \"time kgtk --debug query --graph-cache \" + os.environ['STORE']\n",
-    "os.environ['kypher_'] = \"kgtk query --graph-cache \" + os.environ['STORE']\n",
-    "#os.environ['kypher'] = \"kgtk query --graph-cache \" + os.environ['STORE']\n",
-    "kgtk_environment_variables.append('kgtk')\n",
-    "kgtk_environment_variables.append('kypher')\n",
-    "\n",
-    "# We'll save the current working directory so we can call into other example notebooks later\n",
-    "os.environ[\"EXAMPLES_DIR\"] = os.getcwd()\n",
-    "kgtk_environment_variables.append('EXAMPLES_DIR')\n",
-    "\n",
-    "kgtk_environment_variables.sort()\n",
-    "for variable in kgtk_environment_variables:\n",
-    "    print(\"{}: \\\"{}\\\"\".format(variable, os.environ[variable]))"
+    "files = files.split(',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/pedroszekely/Downloads/kypher\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%cd {output_path}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define the shortcuts for Kypher"
+    "ck = ConfigureKGTK(files)\n",
+    "ck.configure_kgtk(input_graph_path=input_path,\n",
+    "                  output_path=output_path,\n",
+    "                  project_name=project_name,\n",
+    "                 graph_cache_path=graph_cache_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2021-09-18 09:00:30 query]: SQL Translation:\n",
-      "---------------------------------------------\n",
-      "  SELECT *\n",
-      "     FROM graph_1 AS graph_1_c1\n",
-      "     LIMIT ?\n",
-      "  PARAS: [3]\n",
-      "---------------------------------------------\n",
-      "id\tnode1\tlabel\tnode2\n",
-      "P10-P31-Q18610173-85ef4d24-0\tP10\tP31\tQ18610173\n",
-      "P1000-P31-Q18608871-093affb5-0\tP1000\tP31\tQ18608871\n",
-      "P1001-P31-Q15720608-deeedec9-0\tP1001\tP31\tQ15720608\n",
-      "        1.15 real         0.81 user         0.16 sys\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!$kypher \\\n",
-    "-i \"$P31\" --as p31 \\\n",
-    "-i \"$P279\" --as p279 \\\n",
-    "-i \"$ISA\" --as isa \\\n",
-    "-i \"$LABEL\" --as labels \\\n",
-    "-i \"$ALIAS\" --as aliases \\\n",
-    "-i \"$P279STAR\" --as p279star \\\n",
-    "-i \"$QUALIFIERS\" --as qualifiers \\\n",
-    "-i \"$ITEM\" --as items \\\n",
-    "-i \"$QUANTITY\" --as quantities \\\n",
-    "-i \"$EXTERNAL_ID\" --as external_ids \\\n",
-    "-i \"$COORDINATES\" --as coordinates \\\n",
-    "-i \"$MONOLINGUALTEXT\" --as monolingual \\\n",
-    "--limit 3"
+    "ck.print_env_variables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ck.load_files_into_cache()"
    ]
   },
   {
@@ -2650,7 +2492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
